Fix scaling of sponsor logos on mobile view

--- a/src/pages/rules.module.css
+++ b/src/pages/rules.module.css
@@ -5,8 +5,8 @@
 }
 
 .sponsorLogo {
-    height: 60px;
-    margin: 0 1rem;
+    max-height: 60px;
+    width: auto;
 }
 
 .section {
